[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Golfball/Golfball.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
roughness = 0.16

[sub_resource type="SphereShape" id=3]

[node name="Golfball" type="RigidBody" groups=[
"GolfBall",
]]
mass = 2.0
gravity_scale = 4.0
continuous_cd = true
linear_damp = 0.8
angular_damp = 1.0
script = ExtResource( 1 )
out_time = 8.0

[node name="BallMesh" type="MeshInstance" parent="."]
transform = Transform( 0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="OutOfZone_Timer" type="Timer" parent="."]
one_shot = true

[node name="Shot_Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="OutOfZone_Timer" to="." method="_on_OutOfZone_Timer_timeout"]
[connection signal="timeout" from="Shot_Timer" to="." method="_on_Shot_Timer_timeout"]
